# nautobot-ecosystem-health

./: .gitignore  README.md  data.yaml  pyproject.toml  render.py  utils.py
.github/workflows/: deploy-pages.yaml
examples/: github-runs-example.json  github-runs-jobs-example.json
templates/: badges-nautobot.html.jinja  badges-ntc.html.jinja  badges.html.j2  badges.html.jinja  index.html.j2  index.html.jinja  upstream.html.jinja
